--- a/site/style.css
+++ b/site/style.css
@@ -420,3 +420,24 @@ code {
 .serverText {
     padding-left: 3em;
 }
+
+
+
+.column {
+    float: left;
+    width: 45%;
+    padding: 5px;
+  }
+  
+  /* Clear floats after image containers */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  img:hover{
+    -ms-transform: scale(1.3); /* IE 9 */
+    -webkit-transform: scale(1.3); /* Safari 3-8 */
+    transform: scale(1.3);
+    }
