--- a/site/style.css
+++ b/site/style.css
@@ -85,7 +85,7 @@ video {
 
 html,
 body {
-    background-color: #303841;
+    background-color: white;
     font-family: ahoma, geneva, sans-serif;
     width: 100vw;
     height: 100 vh;
@@ -96,7 +96,7 @@ body {
     text-align: center;
     padding: 40px;
     font-weight: bold;
-    color: #7aa5d2;
+    color: #2F4226;
 }
 
 #corps {
@@ -128,12 +128,12 @@ section {
     padding-bottom: 0.8em;
     margin: 1em;
     /* Marge extérieure */
-    background-color: #47555e;
+    background-color: #E4BBA0;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     word-wrap: break-word;
-    color: #EEEEEE;
+    color: black;
     line-height: 1.5;
 }
 
@@ -145,30 +145,30 @@ h2 {
     text-align: center;
     padding-top: 1em;
     padding-bottom: 2em;
-    color: #7aa5d2;
+    color: #2F4226;
 }
 
 h3 {
     font-size: 1.4em;
     text-align: center;
     padding-bottom: 2em;
-    color: #7aa5d2;
+    color: #2F4226;
 }
 
 h4 {
     font-size: 1.2em;
-    color: #7aa5d2;
+    color: #2F4226;
     margin: 1em;
 }
 
 h5 {
     font-size: 1.1em;
-    color: #7aa5d2;
+    color: #2F4226;
 }
 
 h6 {
     font-size: 1em;
-    color: #7aa5d2;
+    color: #2F4226;
 }
 
 p {
@@ -178,7 +178,7 @@ p {
 
 p a {
     text-decoration: none;
-    color: #7aa5d2;
+    color: black;
 }
 
 
@@ -199,13 +199,13 @@ footer {
     /* marge intérieure */
     padding-top: 10px;
     word-wrap: break-word;
-    background-color: #47555e;
+    background-color: #E4BBA0;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     text-align: center;
     line-height: 50px;
-    color: #DDD;
+    color: black;
 }
 
 
@@ -224,7 +224,7 @@ footer {
     padding: 0px;
     /* marge intérieure */
     word-wrap: break-word;
-    background-color: #47555e;
+    background-color: #E4BBA0;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -239,15 +239,15 @@ footer {
     text-decoration: none;
     display: block;
     text-align: center;
-    color: #DDD;
+    color: #2F4226;
     line-height: 60px;
 }
 
 .affichage_lien_menu:hover {
-    color: #7aa5d2;
+    color: #2F4226;
     margin-left: 20px;
     border-bottom: 4px solid;
-    border-color: #7aa5d2;
+    border-color: #2F4226;
     font-weight: bold;
     transition-duration: 0s, 0s, 1s, 1s;
     transition-property: font-weight, color, margin-left, border-bottom;
@@ -265,7 +265,7 @@ footer {
     margin: 20px;
     /* Marge extérieure */
     word-wrap: break-word;
-    background-color: #47555e;
+    background-color: #2F4226;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -280,22 +280,22 @@ footer {
     text-decoration: none;
     display: block;
     text-align: left;
-    color: #DDD;
+    color: white;
     line-height: 40px;
 }
 
 .affichage_lien_menu_lat:hover {
-    color: #7aa5d2;
+    color: #E4BBA0;
     font-weight: bold;
     padding-left: 20px;
     border-left: 4px solid;
-    border-color: #7aa5d2;
+    border-color: #2F4226;
     transition-duration: 0s, 0s, 1s, 1s;
     transition-property: font-weight, color, padding-left, border-left;
 }
 
 .lien_paragraphe {
-    color: #7aa5d2;
+    color: #2F4226;
     text-decoration: none;
 }
 
