--- a/site/style.css
+++ b/site/style.css
@@ -85,7 +85,7 @@ video {
 
 html,
 body {
-    background-color: white;
+    background-color: #E1E1E1;
     font-family: ahoma, geneva, sans-serif;
     width: 100vw;
     height: 100 vh;
@@ -265,7 +265,7 @@ footer {
     margin: 20px;
     /* Marge extérieure */
     word-wrap: break-word;
-    background-color: #2F4226;
+    background-color: #FFF7F4;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -280,12 +280,12 @@ footer {
     text-decoration: none;
     display: block;
     text-align: left;
-    color: white;
+    color: #2F4226;
     line-height: 40px;
 }
 
 .affichage_lien_menu_lat:hover {
-    color: #E4BBA0;
+    color: #2F4226;
     font-weight: bold;
     padding-left: 20px;
     border-left: 4px solid;
