--- a/site/style.css
+++ b/site/style.css
@@ -507,3 +507,19 @@ label {
     -webkit-transform: scale(1.3); /* Safari 3-8 */
     transform: scale(1.3);
     }
+
+    .button { 
+        height: 50px; 
+        width: 100px; 
+        } 
+
+    .box {
+        width: 300px;        
+        padding: 50px;
+        margin: 20px;
+      }
+
+    .story {
+        font-family: cursive;
+        margin: 20px; 
+    }
