Added Adblock installation tutorial

--- a/site/style.css
+++ b/site/style.css
@@ -181,6 +181,11 @@ p a {
     color: black;
 }
 
+/* ol Liste tuto */
+.ol-tuto {
+    font-weight: bold;
+}
+
 
 /******************************************************************************/
 
